--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -25,9 +25,9 @@
     "dev": "npx npm-run-all --npm-path npm clean dev:babel:watch",
     "dev:babel:watch": "npx babel --root-mode upward src -d dist --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored --watch",
     "clean": "npx del-cli dist",
-    "test": "jest -c config/jest-config.js --coverage",
-    "test:watch": "jest -c config/jest-config.js --watch",
-    "test:update": "jest -c ./config/jest-config.js --u",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:update": "jest --u",
     "prepublishOnly": "npm run build",
     "link": "npm link",
     "yalc-publish": "npx yalc publish --no-scripts",
@@ -56,18 +56,7 @@
     "react-table": "^7.8.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@testing-library/user-event": "^12.8.3",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "del-cli": "^4.0.1",
-    "enzyme": "^3.11.0",
-    "enzyme-to-json": "^3.6.2",
-    "jest": "^28.1.2",
-    "jest-environment-jsdom": "^28.1.2",
-    "jest-fail-on-console": "^2.4.2",
-    "jest-junit": "^14.0.0",
     "npm-run-all": "^4.1.5"
   },
   "files": [
