chore: deps cleanup

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean": "npx npm-run-all --npm-path npm clean:*",
     "clean:package_clean": "npx lerna run clean --parallel",
     "clean:lerna": "npx lerna clean --yes ",
-    "clean:docs": "npx del-cli dist",
+    "clean:docs": "npx rimraf dist",
     "bootstrap": "npx lerna bootstrap -- --force",
     "dev": "npx lerna run dev --parallel",
     "build": "npx lerna run build",
@@ -79,7 +79,6 @@
     "babel-plugin-optimize-clsx": "^2.6.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "cross-env": "^7.0.3",
-    "del-cli": "^4.0.1",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
     "eslint": "^8.19.0",
