--- a/packages/code-editor/package.json
+++ b/packages/code-editor/package.json
@@ -21,10 +21,10 @@
     "build:babel:node": "cross-env BABEL_ENV=commonjs npx babel --root-mode upward src -d dist --source-maps --extensions '.js,.jsx' --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "build:babel:legacy": "cross-env BABEL_ENV=legacy npx babel --root-mode upward src -d dist/legacy --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "build:babel:modern": "cross-env BABEL_ENV=modern npx babel --root-mode upward src -d dist/modern --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
-    "build:post:clean-snapshots": "npx del-cli **/dist/**/tests",
+    "build:post:clean-snapshots": "npx rimraf **/dist/**/tests",
     "dev": "npx npm-run-all --npm-path npm clean dev:babel:watch",
     "dev:babel:watch": "cross-env BABEL_ENV=commonjs npx babel --root-mode upward src -d dist --extensions '.js,.jsx' --source-maps --copy-files --ignore '**/tests','**/stories' --no-copy-ignored --watch",
-    "clean": "npx del-cli dist",
+    "clean": "npx rimraf dist",
     "prepublishOnly": "npm run build",
     "link": "npm link",
     "lint:prettier": "npx prettier --config ../../prettier.config.js --check \"src/**/*.js\"",
@@ -39,9 +39,7 @@
     "react-monaco-editor": "^0.47.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.18.6",
     "clsx": "^1.2.1",
-    "core-js": "^3.23.3",
     "deep-diff": "^1.0.2",
     "detect-browser": "^5.3.0",
     "focus-visible": "^5.2.0",
@@ -55,10 +53,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
-    "cross-env": "^7.0.3",
-    "del-cli": "^4.0.1",
-    "nodemon": "^2.0.19",
-    "npm-run-all": "^4.1.5"
+    "cross-env": "^7.0.3"
   },
   "files": [
     "dist"
