--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,10 +21,10 @@
     "build:babel:node": "cross-env BABEL_ENV=commonjs npx babel --root-mode upward src -d dist --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "build:babel:legacy": "cross-env BABEL_ENV=legacy npx babel --root-mode upward src -d dist/legacy --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "build:babel:modern": "cross-env BABEL_ENV=modern npx babel --root-mode upward src -d dist/modern --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
-    "build:post:clean-snapshots": "npx del-cli **/dist/**/tests",
+    "build:post:clean-snapshots": "npx rimraf **/dist/**/tests",
     "dev": "npx npm-run-all --npm-path npm clean dev:babel:watch",
     "dev:babel:watch": "cross-env BABEL_ENV=commonjs npx babel --root-mode upward src -d dist --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored --watch",
-    "clean": "npx del-cli dist",
+    "clean": "npx rimraf dist",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "test:update": "jest --u",
@@ -41,13 +41,11 @@
     "react-dom": "^16.13.1 || ^17.0.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.18.6",
     "@hitachivantara/uikit-common-themes": "^3.6.2",
     "@hitachivantara/uikit-react-icons": "^3.9.4",
     "@popperjs/core": "2.11.5",
     "attr-accept": "^2.2.2",
     "clsx": "^1.2.1",
-    "core-js": "^3.23.3",
     "dayjs": "^1.11.3",
     "deep-diff": "^1.0.2",
     "detect-browser": "^5.3.0",
@@ -61,6 +59,7 @@
     "rc-slider": "10.0.0",
     "rc-tooltip": "^5.1.1",
     "react-debounce-render": "^8.0.2",
+    "react-google-charts": "^4.0.0",
     "react-outside-click-handler": "^1.3.0",
     "react-popper": "^2.3.0",
     "react-resize-detector": "^7.1.2",
@@ -71,11 +70,9 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
+    "@types/react": "^17.0.47",
     "@types/react-window": "^1.8.5",
-    "del-cli": "^4.0.1",
-    "nodemon": "^2.0.19",
-    "npm-run-all": "^4.1.5",
-    "react-google-charts": "^4.0.0"
+    "cross-env": "^7.0.3"
   },
   "files": [
     "dist"
