--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -24,8 +24,8 @@
     "build:babel:legacy": "cross-env BABEL_ENV=legacy npx babel --root-mode upward bin -d dist/legacy --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "build:babel:modern": "cross-env BABEL_ENV=modern npx babel --root-mode upward bin -d dist/modern --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "svg-optimize": "npx svgo --config=./svgo-config.yml -r -f assets assets",
-    "clean": "npx del-cli dist",
-    "clean:all": "npx del-cli dist bin",
+    "clean": "npx rimraf dist",
+    "clean:all": "npx rimraf dist bin",
     "prepare": "npx npm-run-all --npm-path npm --serial clean:all svg-optimize --parallel build:convert build:copy",
     "prepublishOnly": "npm run build",
     "link": "npm link",
@@ -47,13 +47,10 @@
     "yargs": "^17.4.1"
   },
   "devDependencies": {
-    "@babel/runtime": "^7.18.6",
-    "core-js": "^3.23.3",
-    "cpy-cli": "^4.1.0",
-    "del-cli": "^4.0.1",
+    "@types/react": "^17.0.47",
+    "cross-env": "^7.0.3",
     "htmltojsx": "^0.3.0",
     "jsdom-no-contextify": "^3.1.0",
-    "npm-run-all": "^4.1.5",
     "svgo": "^1.3.2"
   },
   "files": [
