--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -21,10 +21,10 @@
     "build:babel:node": "cross-env BABEL_ENV=commonjs npx babel --root-mode upward src -d dist --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "build:babel:legacy": "cross-env BABEL_ENV=legacy npx babel --root-mode upward src -d dist/legacy --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "build:babel:modern": "cross-env BABEL_ENV=modern npx babel --root-mode upward src -d dist/modern --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
-    "build:post:clean-snapshots": "npx del-cli **/dist/**/tests",
+    "build:post:clean-snapshots": "npx rimraf **/dist/**/tests",
     "dev": "npx npm-run-all --npm-path npm clean dev:babel:watch",
     "dev:babel:watch": "npx babel --root-mode upward src -d dist --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored --watch",
-    "clean": "npx del-cli dist",
+    "clean": "npx rimraf dist",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "test:update": "jest --u",
@@ -41,12 +41,10 @@
     "react-dom": "^16.13.1 || ^17.0.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.18.6",
     "@hitachivantara/uikit-react-core": "^3.68.6",
     "@hitachivantara/uikit-react-icons": "^3.9.4",
     "@types/react-table": "^7.7.12",
     "clsx": "^1.2.1",
-    "core-js": "^3.23.3",
     "dayjs": "^1.11.3",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
@@ -56,8 +54,7 @@
     "react-table": "^7.8.0"
   },
   "devDependencies": {
-    "del-cli": "^4.0.1",
-    "npm-run-all": "^4.1.5"
+    "@types/react": "^17.0.47"
   },
   "files": [
     "dist"
