--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -18,17 +18,14 @@
     "build": "npx npm-run-all --npm-path npm clean build:*",
     "build:to-scss": "json-to-scss \"src/*.*\" dist",
     "build:to-json": "npx cpy-cli 'src/*.json' dist",
-    "clean": "npx del-cli dist",
+    "clean": "npx rimraf dist",
     "prepublishOnly": "npm run build",
     "link": "npm link",
     "yalc-publish": "npx yalc publish --no-scripts"
   },
   "devDependencies": {
-    "cpy-cli": "^4.1.0",
-    "del-cli": "^4.0.1",
+    "@types/react": "^17.0.47",
     "json-to-scss": "file:lib/json-to-scss.tgz",
-    "npm-run-all": "^4.1.5",
-    "watch": "^1.0.2",
     "yargs": "^17.5.1"
   },
   "files": [
