--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -21,10 +21,10 @@
     "build:babel:node": "cross-env BABEL_ENV=commonjs npx babel --root-mode upward src -d dist --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "build:babel:legacy": "cross-env BABEL_ENV=legacy npx babel --root-mode upward src -d dist/legacy --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "build:babel:modern": "cross-env BABEL_ENV=modern npx babel --root-mode upward src -d dist/modern --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
-    "build:post:clean-snapshots": "npx del-cli **/dist/**/tests",
+    "build:post:clean-snapshots": "npx rimraf **/dist/**/tests",
     "dev": "npx npm-run-all --npm-path npm clean dev:babel:watch",
     "dev:babel:watch": "cross-env BABEL_ENV=commonjs npx babel --root-mode upward src -d dist --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored --watch",
-    "clean": "npx del-cli dist",
+    "clean": "npx rimraf dist",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "test:update": "jest --u",
@@ -42,11 +42,8 @@
     "react-dom": "^16.13.1 || ^17.0.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.18.6",
     "@hitachivantara/uikit-react-core": "^3.68.6",
     "clsx": "^1.2.1",
-    "core-js": "^3.23.3",
-    "deep-diff": "^1.0.2",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react-plotly.js": "^2.5.1"
@@ -54,9 +51,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.182",
     "@types/plotly.js": "^1.54.22",
-    "del-cli": "^4.0.1",
-    "nodemon": "^2.0.19",
-    "npm-run-all": "^4.1.5"
+    "@types/react": "^17.0.47"
   },
   "files": [
     "dist"
