--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -22,11 +22,10 @@ on:
 #                                 +----------+
 
 env:
-  RESOLVE_REGISTRY: https://repo.orl.eng.hitachivantara.com/artifactory/api/npm/npm/
   DOCUMENTATION_PUBLISH_REPO: ${{ github.repository_owner }}/${{ github.repository_owner }}.github.io
   DOCUMENTATION_PUBLISH_BRANCH: master
   DOCUMENTATION_PUBLISH_FOLDER: uikit/pr-${{ github.event.number }}
-  DOCUMENTATION_PUBLISH_MESSAGE: "docs: storybook for PR ${{ github.repository }}#${{ github.event.number }}"
+  DOCUMENTATION_PUBLISH_MESSAGE: "docs: storybook for PR ${{ github.event.number }} of ${{ github.repository }}"
   DOCUMENTATION_URL: https://${{ github.repository_owner }}.github.io/uikit/pr-${{ github.event.number }}/
   PR_URL: https://github.com/${{ github.repository }}/pull/${{ github.event.number }}
   RUN_URL: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
@@ -40,13 +39,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: "14"
 
       - name: Install
         run: |
-          npm config set @hv:registry ${RESOLVE_REGISTRY}
           npm ci
 
       - name: Bootstrap
@@ -69,13 +67,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: "14"
 
       - name: Install
         run: |
-          npm config set @hv:registry ${RESOLVE_REGISTRY}
           npm ci
 
       - name: Bootstrap
@@ -86,7 +83,7 @@ jobs:
           npm run build-documentation
 
       - name: Archive Documentation
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         with:
           name: documentation
           path: ${{ github.workspace }}/dist
@@ -98,8 +95,9 @@ jobs:
 
   Github-Deployment:
     name: Github Deployment
+    if: github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]'
     needs: [Build-Documentation]
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Start Documentation Deployment
@@ -117,16 +115,15 @@ jobs:
         with:
           repository: ${{ env.DOCUMENTATION_PUBLISH_REPO }}
           ref: ${{ env.DOCUMENTATION_PUBLISH_BRANCH }}
-          ssh-key: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
+          token: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
           path: gh-docs
           fetch-depth: 1
 
       - name: Remove Previous Documentation
         run: |
           rm -rf ${{ github.workspace }}/gh-docs/${DOCUMENTATION_PUBLISH_FOLDER}/*
-
       - name: Fetch Storybook
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v2
         with:
           name: documentation
           path: ${{ github.workspace }}/gh-docs/${{env.DOCUMENTATION_PUBLISH_FOLDER}}
@@ -139,12 +136,10 @@ jobs:
           git add -A ${DOCUMENTATION_PUBLISH_FOLDER}
           git commit -m "${DOCUMENTATION_PUBLISH_MESSAGE}"
           git push
-
       - name: Cleanup Folder
         if: always()
         run: |
           rm -rf ${{ github.workspace }}/gh-docs
-
       - name: Update Deployment Status
         uses: bobheadxi/deployments@v0.4.3
         if: always()
@@ -174,12 +169,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: "14"
 
       - name: Fetch Storybook
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v2
         with:
           name: documentation
           path: ${{ github.workspace }}/dist
@@ -192,7 +187,6 @@ jobs:
       - name: Install automation/pa11y
         run: |
           cd ${{ github.workspace }}/automation/pa11y
-          npm config set @hv:registry ${RESOLVE_REGISTRY}
           npm ci
 
       - name: Test A11Y
@@ -218,11 +212,11 @@ jobs:
       image: dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/joaoeg/docker-robot-framework:0.1
       options: --shm-size=6g --cpus 4 -u 2501
       env:
-        BROWSER: ${{ matrix.browser }}
-        ROBOT_TESTS_DIR: ./automation/robot/storybook/core
+        BROWSER: chrome
+        ROBOT_TESTS_DIR: ./automation/robot/storybook
         ROBOT_REPORTS_DIR: ./reports
         ROBOT_THREADS: 4
-        ROBOT_OPTIONS: "--variable STORYBOOK_URL:http://storybook --variable BROWSER:${{ matrix.browser }} --exclude bug-${{ matrix.browser }} --exclude bug-${{ matrix.browser }}-webdriver --exclude issue --exclude issue-${{ matrix.browser }} --exclude bug-infrastructure --exclude bug-infrastructure-${{ matrix.browser }}"
+        ROBOT_OPTIONS: "--variable STORYBOOK_URL:http://storybook --variable BROWSER:chrome --exclude bug-chrome --exclude bug-chrome-webdriver --exclude issue --exclude issue-chrome --exclude bug-infrastructure --exclude bug-infrastructure-chrome"
 
     services:
       storybook:
@@ -237,7 +231,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Fetch Storybook
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v2
         with:
           name: documentation
           path: ${{ github.workspace }}/dist
@@ -251,7 +245,7 @@ jobs:
         run: ./.github/robot-docker/run-tests-in-virtual-screen-with-rerun.sh
 
       - name: Save Reports
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         if: failure()
         with:
           name: ${{ matrix.browser }}-reports
@@ -275,7 +269,7 @@ jobs:
         with:
           name: documentation
 
-      - uses: technote-space/workflow-conclusion-action@v1
+      - uses: technote-space/workflow-conclusion-action@v2
 
       - name: generate conclusion color
         id: conclusion_color
