--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean": "npx npm-run-all --npm-path npm clean:*",
     "clean:package_clean": "npx lerna run clean --parallel",
     "clean:lerna": "npx lerna clean --yes ",
-    "clean:docs": "npx del-cli dist",
+    "clean:docs": "npx rimraf dist",
     "bootstrap": "npx lerna bootstrap",
     "dev": "npx lerna run dev --parallel",
     "build": "npx lerna run build",
@@ -50,17 +50,18 @@
     }
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/plugin-transform-object-assign": "^7.12.0",
-    "@babel/plugin-transform-react-constant-elements": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
+    "@babel/cli": "^7.18.9",
+    "@babel/core": "^7.18.9",
+    "@babel/eslint-parser": "^7.18.9",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.18.9",
+    "@babel/plugin-transform-object-assign": "^7.18.6",
+    "@babel/plugin-transform-react-constant-elements": "^7.18.9",
+    "@babel/plugin-transform-runtime": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-react": "^7.18.6",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@material-ui/core": "~4.8.0",
     "@storybook/addon-actions": "5.3.19",
     "@storybook/addon-docs": "5.3.19",
@@ -68,42 +69,50 @@
     "@storybook/addons": "5.3.19",
     "@storybook/react": "5.3.19",
     "@testing-library/dom": "^7.22.2",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-optimize-clsx": "^2.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-optimize-clsx": "^2.6.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "del-cli": "^3.0.1",
-    "eslint": "^7.16.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^6.15.0",
+    "classnames": "^2.3.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "eslint": "^8.1.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-import-resolver-webpack": "^0.13.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "find-root": "^1.1.0",
     "fs-extra": "^8.1.0",
     "fs-readdir-recursive": "^1.1.0",
-    "husky": "^4.3.6",
-    "lerna": "^3.22.0",
+    "husky": "^8.0.1",
+    "jest": "^28.1.3",
+    "jest-canvas-mock": "^2.4.0",
+    "jest-environment-jsdom": "^28.1.3",
+    "jest-enzyme": "^7.1.2",
+    "jest-fail-on-console": "^2.4.2",
+    "jest-junit": "^14.0.0",
+    "lerna": "^5.1.8",
     "license-checker": "^25.0.1",
-    "moment": "^2.26.0",
-    "monaco-editor": "0.20.0",
-    "monaco-editor-webpack-plugin": "^1.9.0",
+    "moment": "^2.29.4",
+    "monaco-editor": "^0.31.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
+    "prettier": "^2.7.1",
     "react": "^16.13.1",
-    "react-docgen": "^5.3.0",
+    "react-docgen": "^5.4.3",
     "react-docgen-deprecation-handler": "^1.1.1",
     "react-dom": "^16.13.1",
     "react-monaco-editor": "^0.36.0",
     "spdx-correct": "^3.1.1",
-    "spdx-satisfies": "^5.0.0",
+    "spdx-satisfies": "^5.0.1",
     "ts-check": "0.2.4",
-    "typescript": "^4.1.3"
+    "typescript": "^4.7.4"
   }
 }
