--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -25,13 +25,13 @@
     "build:babel:node": "BABEL_ENV=commonjs npx babel --root-mode upward src -d dist --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "build:babel:legacy": "BABEL_ENV=legacy npx babel --root-mode upward src -d dist/legacy --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "build:babel:modern": "BABEL_ENV=modern npx babel --root-mode upward src -d dist/modern --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
-    "build:post:clean-snapshots": "npx del-cli **/dist/**/tests",
+    "build:post:clean-snapshots": "npx rimraf **/dist/**/tests",
     "dev": "npx npm-run-all --npm-path npm clean dev:babel:watch",
     "dev:babel:watch": "npx babel --root-mode upward src -d dist --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored --watch",
-    "clean": "npx del-cli dist hv-uikit-react-lab-*.tgz",
-    "test": "jest -c config/jest-config.js --coverage",
-    "test:watch": "jest -c config/jest-config.js --watch",
-    "test:update": "jest -c ./config/jest-config.js --u",
+    "clean": "npx rimraf dist hv-uikit-react-lab-*.tgz",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:update": "jest --u",
     "prepack": "npm run build",
     "pack": "npm pack",
     "link": "npm link",
@@ -47,33 +47,21 @@
     "react-monaco-editor": "^0.36.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.12.5",
     "@hv/uikit-react-core": "^2.22.0",
     "@hv/uikit-react-icons": "^2.3.5",
-    "clsx": "^1.1.0",
-    "core-js": "^3.8.1",
-    "lodash": "^4.17.15",
+    "clsx": "^1.2.1",
+    "lodash": "^4.17.21",
     "moment": "^2.26.0",
     "moment-timezone": "^0.5.31",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.8.1",
     "rc-slider": "8.6.3",
     "rc-tooltip": "^3.7.3"
   },
   "devDependencies": {
-    "cash-cp": "^0.2.0",
-    "del-cli": "^3.0.1",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.5.0",
-    "jest": "^24.9.0",
-    "jest-junit": "^6.3.0",
-    "jss-snapshot-serializer": "^1.0.0",
+    "jest": "^28.1.3",
     "npm-run-all": "^4.1.5"
   },
   "files": [
     "dist"
-  ],
-  "jest": {
-    "testEnvironment": "node"
-  }
+  ]
 }
