--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -16,22 +16,19 @@
     "url": "https://github.com/pentaho/hv-uikit-react/issues"
   },
   "scripts": {
-    "dev": "npm-run-all clean -p dev:*",
+    "dev": "npx npm-run-all clean -p dev:*",
     "dev:watch": "npx watch \"npm run build\" ./src/",
     "build": "npm-run-all clean build:*",
     "build:to-scss": "json-to-scss \"src/*.*\" dist",
-    "build:to-json": "npx cp -f src/*.json dist",
-    "clean": "npx del-cli dist hv-uikit-common-themes-*.tgz",
+    "build:to-json": "npx cpy-cli -f src/*.json dist",
+    "clean": "npx rimraf dist hv-uikit-common-themes-*.tgz",
     "prepack": "npm run build",
     "pack": "npm pack",
-    "link": "npm link"
+    "link": "npm link",
+    "license-check": "node ../../scripts/license-check.cjs ../../config/license-check.json"
   },
   "devDependencies": {
-    "cash-cp": "^0.2.0",
-    "del-cli": "^3.0.1",
-    "json-to-scss": "file:lib/json-to-scss.tgz",
-    "npm-run-all": "^4.1.5",
-    "watch": "^1.0.2"
+    "json-to-scss": "file:lib/json-to-scss.tgz"
   },
   "files": [
     "dist"
