--- a/.github/workflows/v2x.yml
+++ b/.github/workflows/v2x.yml
@@ -68,9 +68,9 @@ jobs:
       - name: Test
         run: npm run test
 
-  Build-Documentation:
-    name: Build Documentation
-    runs-on: [self-hosted, Linux]
+  Build-Storybook:
+    name: Build Storybook
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -83,26 +83,27 @@ jobs:
       - name: Install
         run: |
           npm ci
+
       - name: Bootstrap
         run: npm run bootstrap
 
-      - name: Generate Documentation
+      - name: Build Storybook
         run: |
           npm run build-documentation
-      - name: Archive Documentation
+
+      - name: Archive Storybook
         uses: actions/upload-artifact@v2
         with:
-          name: documentation
+          name: storybook
           path: ${{ github.workspace }}/dist
 
       - name: Clean Folders
         if: always()
         run: |
-          rm -rf ${{ github.workspace }}/dist
 
   A11Y-Tests:
     name: Accessibility Tests
-    needs: [Build-Documentation]
+    needs: [Build-Storybook]
     runs-on: [self-hosted, Linux]
 
     services:
@@ -118,8 +119,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          ref: "v2.x"
 
       - uses: actions/setup-node@v2
         with:
@@ -128,7 +127,7 @@ jobs:
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
         with:
-          name: documentation
+          name: storybook
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
@@ -139,7 +138,6 @@ jobs:
       - name: Install automation/pa11y
         run: |
           cd ${{ github.workspace }}/automation/pa11y
-          npm config set @hv:registry ${RESOLVE_REGISTRY}
           npm ci
 
       - name: Test A11Y
@@ -154,7 +152,7 @@ jobs:
 
   Applitools:
     name: Applitools Storybook Visual Testing
-    needs: [Build-Documentation]
+    needs: [Build-Storybook]
     runs-on: [self-hosted, Linux]
 
     services:
@@ -170,8 +168,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          ref: "v2.x"
 
       - uses: actions/setup-node@v2
         with:
@@ -180,7 +176,7 @@ jobs:
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
         with:
-          name: documentation
+          name: storybook
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
@@ -191,10 +187,9 @@ jobs:
       - name: Install automation/Applitools
         run: |
           cd ${{ github.workspace }}/automation/applitools
-          npm config set @hv:registry ${RESOLVE_REGISTRY}
           npm ci
 
-      - name: run Applitools Storybook Visual Testing
+      - name: Run Applitools Storybook Visual Testing
         env:
           APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
         run: |
@@ -215,7 +210,7 @@ jobs:
 
   Robot:
     name: Test Robot
-    needs: [Build-Documentation]
+    needs: [Build-Storybook]
     runs-on: [self-hosted, Linux]
     timeout-minutes: 60
     strategy:
@@ -243,13 +238,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          ref: "v2.x"
 
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
         with:
-          name: documentation
+          name: storybook
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
@@ -273,79 +266,14 @@ jobs:
           rm -rf ${{ github.workspace }}/dist
           rm -rf ${{ github.workspace }}/reports
 
-  Notify-End:
-    name: Notify End
-    needs: [Static-Checks, A11Y-Tests, Applitools, Robot]
-    if: always()
-    runs-on: ubuntu-latest
-
-    steps:
-      # delete artifact since it was published to gh-pages
-      - uses: geekyeggo/delete-artifact@v2
-        with:
-          name: documentation
-
-      - uses: technote-space/workflow-conclusion-action@v2
-
-      - name: generate conclusion color
-        id: conclusion_color
-        uses: actions/github-script@v3
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            if("${{ env.WORKFLOW_CONCLUSION }}" === "success") core.exportVariable("COLOR", "#63A621")
-            else if("${{ env.WORKFLOW_CONCLUSION }}" === "failure") core.exportVariable("COLOR", "#C62828")
-            else if("${{ env.WORKFLOW_CONCLUSION }}" === "neutral") core.exportVariable("COLOR", "#BCBCBC")
-            else if("${{ env.WORKFLOW_CONCLUSION }}" === "cancelled") core.exportVariable("COLOR", "#FFD00A")
-            else if("${{ env.WORKFLOW_CONCLUSION }}" === "timed_out") core.exportVariable("COLOR", "#FFD00A")
-
-      - name: Notify CI
-        uses: hbfernandes/slack-action@1.0
-        env:
-          SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
-          CONCLUSION: ${{ env.WORKFLOW_CONCLUSION }}
-        with:
-          args: |
-            {
-              "channel": "ui-kit-eng-ci",
-              "attachments": [
-                {
-                  "mrkdwn_in": ["text"],
-                  "color": "${{env.COLOR}}",
-                  "title": "${{ github.workflow }} finished: ${{ env.CONCLUSION }}",
-                  "title_link": "${{ env.RUN_URL }}"
-                }
-              ]
-            }
-
-      - name: Notify Fail
-        if: failure()
-        uses: hbfernandes/slack-action@1.0
-        env:
-          SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
-          CONCLUSION: ${{ env.WORKFLOW_CONCLUSION }}
-        with:
-          args: |
-            {
-              "channel": "ui-kit-internal",
-              "attachments": [
-                {
-                  "mrkdwn_in": ["text"],
-                  "color": "${{env.COLOR}}",
-                  "title": "${{ github.workflow }} finished: ${{ env.CONCLUSION }}",
-                  "title_link": "${{ env.RUN_URL }}"
-                }
-              ]
-            }
-
   Notify-End-Internal:
-    name: Notify End
+    name: Notify End Internal
     needs: [Static-Checks, A11Y-Tests, Applitools, Robot]
     if: failure()
     runs-on: ubuntu-latest
 
     steps:
-      - uses: technote-space/workflow-conclusion-action@v2
+      - uses: technote-space/workflow-conclusion-action@v1
       - name: generate conclusion color
         id: conclusion_color
         uses: actions/github-script@v3
