--- a/.github/workflows/v2x.yml
+++ b/.github/workflows/v2x.yml
@@ -18,23 +18,17 @@ on:
   workflow_dispatch:
 
 # flow:
-#      +------------+
-#      |Notify-Start|
-#      +-----+------+
-#            |
-#            +----------------------------------------------+
-#            |                                              |
-# +----------v-------------------------+          +---------v---------+
+# +------------------------------------+          +-------------------+
 # |Static-Checks (Licenses, Lint, Jest)|          |Build-Documentation|
 # +----------+-------------------------+          +---------+---------+
 #            |                                              |
-#            |                   +-----------+--------------+-------------------------+
-#            |                   |           |              |                         |
-#            |             +-----v----+ +----v-----+ +------v----------------+ +------v-----------+
-#            |             |A11Y-Tests| |Applitools| |Robot (chrome, firefox)| |Robot-Windows (ie)|
-#            |             +-----+----+ +----+-----+ +------+----------------+ +------+-----------+
-#            |                   |           |              |                         |
-#            +-------------------+-----+-----+--------------+-------------------------+
+#            |                   +-----------+--------------+
+#            |                   |           |              |
+#            |             +-----v----+ +----v-----+ +------v----------------+
+#            |             |A11Y-Tests| |Applitools| |Robot (chrome, firefox)|
+#            |             +-----+----+ +----+-----+ +------+----------------+
+#            |                   |           |              |
+#            +-------------------+-----+-----+--------------+
 #                                      |
 #                   +----------+       |        +-------+
 #                   |Notify End|<------+------->|Release|
@@ -45,62 +39,9 @@ env:
   RUN_URL: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
 
 jobs:
-  Notify-Start:
-    name: Notify Start
-    runs-on: ubuntu-latest
-    steps:
-      - name: Notify
-        uses: hbfernandes/slack-action@1.0
-        env:
-          SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
-        with:
-          args: |
-            {
-              "channel": "ui-kit-eng-ci",
-              "attachments": [
-                {
-                  "mrkdwn_in": ["text"],
-                  "title": "Workflow ${{ github.workflow }} (${{github.ref}}) build started",
-                  "text": "${{ env.RUN_URL }}",
-                  "footer": "by ${{github.actor}}"
-                }
-              ]
-            }
-
   Static-Checks:
     name: Licenses, Lint, Jest
     runs-on: [self-hosted, Linux]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - uses: actions/setup-node@v2
-        with:
-          node-version: "14"
-
-      - name: Install
-        run: |
-          npm ci
-      - name: Bootstrap
-        run: npm run bootstrap
-
-      - name: Build
-        run: npm run build
-
-      - name: License Check
-        run: npm run license-check
-
-      - name: Lint
-        run: npm run lint
-
-      - name: Test
-        run: npm run test
-
-  Build-Documentation:
-    name: Build Documentation
-    runs-on: [self-hosted, Linux]
-    needs: [Notify-Start]
-
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -113,31 +54,56 @@ jobs:
 
       - name: Install
         run: |
-          npm config set @hv:registry ${RESOLVE_REGISTRY}
           npm ci
 
       - name: Bootstrap
         run: npm run bootstrap
 
-      - name: Generate Documentation
+      - name: License Check
+        run: npm run license-check
+
+      - name: Lint
+        run: npm run lint
+
+      - name: Test
+        run: npm run test
+
+  Build-Storybook:
+    name: Build Storybook
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+
+      - name: Install
+        run: |
+          npm ci
+
+      - name: Bootstrap
+        run: npm run bootstrap
+
+      - name: Build Storybook
         run: |
           npm run build-documentation
 
-      - name: Archive Documentation
-        if: failure()
+      - name: Archive Storybook
         uses: actions/upload-artifact@v2
         with:
-          name: documentation
+          name: storybook
           path: ${{ github.workspace }}/dist
 
       - name: Clean Folders
         if: always()
         run: |
-          rm -rf ${{ github.workspace }}/dist
 
   A11Y-Tests:
     name: Accessibility Tests
-    needs: [Build-Documentation]
+    needs: [Build-Storybook]
     runs-on: [self-hosted, Linux]
 
     services:
@@ -153,8 +119,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          ref: "v2.x"
 
       - uses: actions/setup-node@v2
         with:
@@ -163,7 +127,7 @@ jobs:
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
         with:
-          name: documentation
+          name: storybook
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
@@ -174,7 +138,6 @@ jobs:
       - name: Install automation/pa11y
         run: |
           cd ${{ github.workspace }}/automation/pa11y
-          npm config set @hv:registry ${RESOLVE_REGISTRY}
           npm ci
 
       - name: Test A11Y
@@ -189,7 +152,7 @@ jobs:
 
   Applitools:
     name: Applitools Storybook Visual Testing
-    needs: [Build-Documentation]
+    needs: [Build-Storybook]
     runs-on: [self-hosted, Linux]
 
     services:
@@ -205,17 +168,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          ref: "v2.x"
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: "14"
 
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
         with:
-          name: documentation
+          name: storybook
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
@@ -228,12 +189,19 @@ jobs:
           cd ${{ github.workspace }}/automation/applitools
           npm ci
 
-      - name: run Applitools Storybook Visual Testing
+      - name: Run Applitools Storybook Visual Testing
         env:
           APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
         run: |
           cd ${{ github.workspace }}/automation/applitools
-          npx eyes-storybook -u http://localhost:9001
+          npx eyes-storybook -u http://localhost:9001 > applitools-logs.txt
+
+      - name: Archive Logs
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: applitools-logs
+          path: ${{ github.workspace }}/automation/applitools/applitools-logs.txt
 
       - name: Clean Folders
         if: always()
@@ -242,7 +210,7 @@ jobs:
 
   Robot:
     name: Test Robot
-    needs: [Build-Documentation]
+    needs: [Build-Storybook]
     runs-on: [self-hosted, Linux]
     timeout-minutes: 60
     strategy:
@@ -270,13 +238,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          ref: "v2.x"
 
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
         with:
-          name: documentation
+          name: storybook
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
@@ -300,71 +266,14 @@ jobs:
           rm -rf ${{ github.workspace }}/dist
           rm -rf ${{ github.workspace }}/reports
 
-  Robot-Windows:
-    name: Test Robot (Windows)
-    needs: Build-Documentation
-    runs-on: [self-hosted, Windows]
-    timeout-minutes: 200
-    strategy:
-      fail-fast: false
-      matrix:
-        browser: [ie]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: "v2.x"
-
-      - name: Fetch Storybook
-        uses: actions/download-artifact@v2
-        with:
-          name: documentation
-          path: ${{ github.workspace }}/dist
-
-      - name: Run SELENIUM Robot
-        uses: ./.github/robot
-        with:
-          storybook-url: http://localhost:9002
-          browser: ${{ matrix.browser }}
-          excludes: |
-            bug-${{ matrix.browser }}
-            bug-${{ matrix.browser }}-webdriver
-            issue
-            issue-${{ matrix.browser }}
-            bug-infrastructure
-            bug-infrastructure-${{ matrix.browser }}
-          output-dir: ./reports
-          processes: 3
-          path: ./automation/robot/storybook/core
-
-      - name: Save Reports
-        uses: actions/upload-artifact@v1
-        if: failure()
-        with:
-          name: ${{ matrix.browser }}-reports
-          path: ${{ github.workspace }}/reports
-
-      - name: Clean Folders
-        if: always()
-        run: |
-          Remove-Item -path ${{ github.workspace }}/dist -recurse -force
-          Remove-Item -path ${{ github.workspace }}/reports -recurse -force
-
-  Notify-End:
-    name: Notify End
-    needs: [Static-Checks, A11Y-Tests, Applitools, Robot, Robot-Windows]
-    if: always()
+  Notify-End-Internal:
+    name: Notify End Internal
+    needs: [Static-Checks, A11Y-Tests, Applitools, Robot]
+    if: failure()
     runs-on: ubuntu-latest
 
     steps:
-      # delete artifact since it was published to gh-pages
-      - uses: geekyeggo/delete-artifact@v1
-        with:
-          name: documentation
-
       - uses: technote-space/workflow-conclusion-action@v1
-
       - name: generate conclusion color
         id: conclusion_color
         uses: actions/github-script@v3
@@ -377,7 +286,7 @@ jobs:
             else if("${{ env.WORKFLOW_CONCLUSION }}" === "cancelled") core.exportVariable("COLOR", "#FFD00A")
             else if("${{ env.WORKFLOW_CONCLUSION }}" === "timed_out") core.exportVariable("COLOR", "#FFD00A")
 
-      - name: Notify
+      - name: Notify Fail
         uses: hbfernandes/slack-action@1.0
         env:
           SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
@@ -385,20 +294,20 @@ jobs:
         with:
           args: |
             {
-              "channel": "ui-kit-eng-ci",
+              "channel": "ui-kit-internal",
               "attachments": [
                 {
                   "mrkdwn_in": ["text"],
                   "color": "${{env.COLOR}}",
-                  "title": "${{ github.workflow }} (${{github.ref}}) build finished - ${{ env.CONCLUSION }}",
-                  "text": "${{ env.RUN_URL }}"
+                  "title": "${{ github.workflow }} finished: ${{ env.CONCLUSION }}",
+                  "title_link": "${{ env.RUN_URL }}"
                 }
               ]
             }
 
   Release:
     if: github.event_name == 'schedule' && !contains(github.event.head_commit.message, '${ RELEASE_COMMIT_MESSAGE }')
-    needs: [Static-Checks, A11Y-Tests, Applitools, Robot, Robot-Windows]
+    needs: [Static-Checks, A11Y-Tests, Applitools, Robot]
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Release
