--- a/.github/workflows/pr-close.yml
+++ b/.github/workflows/pr-close.yml
@@ -1,4 +1,4 @@
-name: Pull Request
+name: Pull Request Close
 on:
   pull_request:
     branches:
@@ -22,7 +22,7 @@ jobs:
         with:
           repository: ${{ env.DOCUMENTATION_PUBLISH_REPO }}
           ref: ${{ env.DOCUMENTATION_PUBLISH_BRANCH }}
-          ssh-key: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
+          token: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
           path: gh-docs
           fetch-depth: 0
 
