--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -42,16 +42,16 @@
   "dependencies": {
     "@hitachivantara/uikit-common-themes": "^3.6.3",
     "clsx": "^1.2.1",
-    "prop-types": "^15.8.1",
-    "recursive-readdir": "^2.2.2",
-    "yargs": "^17.4.1"
+    "prop-types": "^15.8.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.47",
     "cross-env": "^7.0.3",
     "htmltojsx": "^0.3.0",
     "jsdom-no-contextify": "^3.1.0",
-    "svgo": "^1.3.2"
+    "recursive-readdir": "^2.2.2",
+    "svgo": "^1.3.2",
+    "yargs": "^17.4.1"
   },
   "files": [
     "dist"
