--- a/.github/workflows/robot.yml
+++ b/.github/workflows/robot.yml
@@ -2,6 +2,9 @@ name: Run Robot Tests
 on:
   workflow_dispatch:
 
+env:
+  RESOLVE_REGISTRY: https://repo.orl.eng.hitachivantara.com/artifactory/api/npm/npm/
+
 jobs:
   Notify-Start:
     name: Notify Start
@@ -40,6 +43,7 @@ jobs:
 
       - name: Install
         run: |
+          npm config set @hv:registry ${RESOLVE_REGISTRY}
           npm ci
 
       - name: Bootstrap
