--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,8 @@
   "version": "independent",
   "command": {
     "publish": {
-      "npmClient": "npm"
+      "npmClient": "npm",
+      "registry": "https://repo.orl.eng.hitachivantara.com/artifactory/api/npm/uikit-npm-release-orl/"
     },
     "version": {
       "allowBranch": ["v2.x"],
