--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hv/uikit-react-core",
-  "version": "2.22.4",
+  "version": "2.22.6",
   "description": "A collection of React components for the Hitachi Vantara's Design System.",
   "homepage": "https://github.com/pentaho/hv-uikit-react",
   "license": "Apache-2.0",
@@ -24,7 +24,7 @@
     "build:post:clean-snapshots": "npx rimraf **/dist/**/tests",
     "dev": "npx npm-run-all --npm-path npm clean dev:babel:watch",
     "dev:babel:watch": "BABEL_ENV=commonjs npx babel --root-mode upward src -d dist --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored --watch",
-    "copy": "npx cpy-cli -f src/index.js dist/index.es.js",
+    "copy": "cpy -f src/index.js dist/index.es.js",
     "clean": "npx rimraf dist hv-uikit-react-core-*.tgz",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
@@ -52,19 +52,20 @@
     "focus-within-polyfill": "5.2.1",
     "hoist-non-react-statics": "^3.3.2",
     "lodash": "^4.17.21",
-    "moment": "^2.24.0",
+    "moment": "^2.29.4",
     "plotly.js-basic-dist": "^1.54.1",
     "prop-types": "^15.8.1",
     "react-google-charts": "^3.0.15",
     "react-outside-click-handler": "^1.3.0",
-    "react-plotly.js": "^2.4.0",
-    "react-resize-aware": "^3.0.0",
+    "react-plotly.js": "^2.5.1",
+    "react-resize-aware": "^3.1.1",
     "react-reveal": "^1.2.2",
     "react-table": "6.8.6",
-    "react-table-hoc-fixed-columns": "2.1.1"
+    "react-table-hoc-fixed-columns": "2.3.4"
   },
   "devDependencies": {
     "@types/plotly.js": "^1.50.12",
+    "cpy-cli": "^4.1.0",
     "cross-env": "^7.0.3",
     "jest": "^28.1.3"
   },
