--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -51,7 +51,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
-    "@types/plotly.js": "^1.54.22",
+    "@types/plotly.js": "2.12.2",
     "@types/react": "^17.0.47"
   },
   "files": [
