--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hv/uikit-common-themes",
-  "version": "2.0.11",
+  "version": "2.0.12",
   "description": "A collection of themes for use with Hitachi Vantara Components.",
   "homepage": "https://github.com/pentaho/hv-uikit-react",
   "license": "Apache-2.0",
@@ -20,7 +20,7 @@
     "dev:watch": "npx watch \"npm run build\" ./src/",
     "build": "npm-run-all clean build:*",
     "build:to-scss": "json-to-scss \"src/*.*\" dist",
-    "build:to-json": "cpy -f src/*.json dist",
+    "build:to-json": "npx cpy --flat src/*.json dist",
     "clean": "npx rimraf dist hv-uikit-common-themes-*.tgz",
     "prepack": "npm run build",
     "pack": "npm pack",
