chore: upgrading lerna version

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@hookform/resolvers": "^2.9.7",
+    "@lerna/publish": "^5.4.3",
     "@mui/material": "^5.9.3",
     "@mui/styles": "^5.9.3",
     "@playwright/test": "^1.24.2",
@@ -109,7 +110,7 @@
     "jest-enzyme": "^7.1.2",
     "jest-fail-on-console": "^2.4.2",
     "jest-junit": "^14.0.0",
-    "lerna": "^5.3.0",
+    "lerna": "^5.4.3",
     "license-checker": "^25.0.1",
     "monaco-editor": "^0.31.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
