--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@emotion/styled": "^11.10.0",
     "@hookform/resolvers": "^2.9.7",
     "@lerna/publish": "^5.4.3",
+    "@lerna/version": "^5.4.3",
     "@mui/material": "^5.9.3",
     "@mui/styles": "^5.9.3",
     "@playwright/test": "^1.24.2",
