--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -37,6 +37,8 @@
   "peerDependencies": {
     "@mui/material": "^5.9.0",
     "@mui/styles": "^5.9.0",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "react": "^16.13.1 || ^17.0.2",
     "react-dom": "^16.13.1 || ^17.0.2"
   },
