--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.10.4",
+    "@emotion/react": "^11.10.4",
     "@storybook/react": "^6.5.10",
     "clsx": "^1.2.1",
     "vite": "^3.1.0",
