--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/core": "^7.19.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@hitachivantara/uikit-react-core": "workspace:*",
@@ -17,16 +18,9 @@
     "vite-tsconfig-paths": "^3.5.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-pipeline-operator": "^7.18.9",
-    "@emotion/babel-plugin": "^11.10.2",
     "@types/react": "^17.0.48",
     "@types/react-dom": "^17.0.17",
     "@vitejs/plugin-react": "^2.1.0",
     "typescript": "^4.8.3"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
   }
 }
