--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,6 +20,7 @@
     "type": "git",
     "url": "https://github.com/lumada-design/hv-uikit-react.git"
   },
+  "type": "module",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
@@ -48,6 +49,7 @@
     "@styled-system/variant": "^5.1.5",
     "@vitejs/plugin-react": "^2.1.0",
     "clsx": "^1.2.1",
+    "react-tracked": "^1.7.10",
     "vite": "^3.1.0",
     "vite-plugin-dts": "^1.5.0",
     "vite-tsconfig-paths": "^3.5.0"
